# credit-default-prediction

./: .gitignore  README.md  environment.yml  pyproject.toml
artifacts/metric/: payoff_config.json
artifacts/splits/: cv_folds.json  test_idx.npy  train_idx.npy
data/processed/: Base_Inadimplencia_Tratada.parquet
notebooks/: 02_model_interpretáveis.ipynb  03_model_performance_gbm.ipynb
src/credit_default_prediction.egg-info/: PKG-INFO  SOURCES.txt
src/evaluation/: credit_gain.py
src/utils/: aux_func.py  paths.py
